# BlockLocal

./: .env.dev  .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml  init.sh  setup.sh  start.sh
bl_cli/: Cargo.toml
bl_cli/src/: main.rs
bl_cli/src/commands/: errors.rs
bl_cli/src/commands/get/: mod.rs  subcommands.rs
bl_cli/src/commands/start/: args.rs
bl_cli/src/config/: mod.rs
bl_cli/src/core/: bl_output.rs  mod.rs
bl_cli/src/utils/: processes.rs
bl_core/: Cargo.toml
bl_core/config/k8s/blockchains/xrpl/: validator.yaml
bl_core/config/nodes/xrpld/compose/: docker-compose.yaml
bl_core/entity/: Cargo.toml  entities.erd.json
bl_core/entity/src/: images.rs  lib.rs  permissions.rs  prelude.rs  profile_has_user.rs  profiles.rs  role_has_permission.rs  roles.rs  user_has_role.rs  users.rs
bl_core/migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20250314_213054_create_roles_table.rs  m20250314_213117_create_permissions_table.rs  m20250314_213216_create_user_has_role_table.rs  m20250314_213232_create_role_has_permission_table.rs  m20250314_220417_create_profiles_table.rs  m20250314_220502_create_profile_has_user_table.rs  m20250314_221843_create_images_table.rs
bl_core/src/: blockchain.rs  client.rs  errors.rs  lib.rs
bl_core/src/db/: errors.rs  mod.rs
bl_core/src/orchastration/: image.rs  mod.rs  network.rs
bl_core/tests/: xrpl.rs
bl_frontend/: README.md  angular.json  package.json  tsconfig.json
blocklocal-cli/: Cargo.toml
blocklocal-cli/src/: errors.rs  main.rs
blocklocal-cli/src/commands/: mod.rs
blocklocal-cli/src/commands/get/: args.rs
blocklocal-cli/src/commands/k3d/: args.rs  mod.rs
blocklocal-cli/src/commands/stop/: args.rs  errors.rs
blocklocal-cli/src/core/: bl_command.rs  errors.rs
blocksim-cli/: Cargo.toml
k3d/: Cargo.toml
k3d/src/: errors.rs  (+1 more)
(+41 files in other folders)
